fixes for counter game on smaller screens

--- a/WyattSandersPortfolio/Components/Pages/CounterGame/CounterGameShop.razor.css
+++ b/WyattSandersPortfolio/Components/Pages/CounterGame/CounterGameShop.razor.css
@@ -1,8 +1,9 @@
 ﻿menu {
-    min-width: 350px;
+    min-width: 100%;
     max-width: 700px;
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
+    padding:1rem;
 }
 
 h2 {
@@ -14,28 +15,29 @@ button {
     width: 100%;
     min-height: 24px;
     max-height: 100px;
-    margin: .1rem 0 .1rem;
+    margin: .1rem 0;
+    padding: 0;
 }
 
 div {
     max-height: 100px;
     display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 img {
-    flex-basis: 1;
-    flex-grow: 1;
     min-width: 50px;
+    height: auto; 
     padding: 1% 0 1%;
+    flex-shrink: 0;
 }
 
 div.text-container {
-    flex-basis: 2;
-    flex-grow: 2;
     display: flex;
     flex-direction: column;
-    align-content:center;
-    align-items:center;
+    justify-content: center;
+    padding-right:.5rem;
 }
 
 p {
@@ -43,13 +45,9 @@ p {
 }
 
     p.item-name {
-        width: 100%;
-        height:60%;
-        padding-top: 1rem;
+        padding-top: 0.5rem;
     }
 
     p.item-cost {
-        width: 100%;
-        height: 40%;
-        padding-bottom: 1rem;
+        padding-bottom: 0.5rem;
     }
