--- a/WyattSandersPortfolio/Components/Pages/CounterGame/CounterGameView.razor.css
+++ b/WyattSandersPortfolio/Components/Pages/CounterGame/CounterGameView.razor.css
@@ -1,6 +1,11 @@
 ﻿div.counter-game {
-    display: flex;
     padding: 2%;
+}
+
+@media screen and (min-width: 600px) {
+    div.counter-game {
+        display: flex;
+    }
 }
 
 section {
