--- a/WyattSandersPortfolio/Components/Pages/DailyChestPage/DailyChest.razor.css
+++ b/WyattSandersPortfolio/Components/Pages/DailyChestPage/DailyChest.razor.css
@@ -66,9 +66,6 @@ h4 {
     height: 65%;
     z-index: 2;
     overflow-y: auto;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    box-sizing: content-box;
 }
 
 .inventory-table {
